--- a/challenge2.html
+++ b/challenge2.html
@@ -8,6 +8,8 @@
 </body>
 
 <template name="messages">
+
+	{{> loginButtons}} <!-- user interface account -->
   <ul>
   	{{#each messages}} <!-- spacebars -->
   	{{> message}}
@@ -22,7 +24,12 @@
 
 <template name="message">
   <li>
-  	{{> message}}
+  	<div class="message-header"
+  	{{user.username}} <span class="time">{{time}}</span>
+  </div>
+  <div class="message-content">
+  	{{message}}
+  </div>
   </li>
 </template>
 
