--- a/challenge2.html
+++ b/challenge2.html
@@ -24,7 +24,7 @@
 
 <template name="message">
   <li>
-  	<div class="message-header"
+  	<div class="message-header">
   	{{user.username}} <span class="time">{{time}}</span>
   </div>
   <div class="message-content">
