--- a/challenge2.html
+++ b/challenge2.html
@@ -1,5 +1,5 @@
 <head>
-  <title>challenge2</title>
+  <title>Meteor Chat App</title>
 </head>
 
 <body>
@@ -8,6 +8,11 @@
 </body>
 
 <template name="messages">
+  <div class="header"> Hello On this Char room
+
+    
+
+</div>
 
 	{{> loginButtons align="right"}} <!-- user interface account -->
   <ul>
