add some css change to the li and ul tags

--- a/challenge2.html
+++ b/challenge2.html
@@ -8,9 +8,7 @@
 </body>
 
 <template name="messages">
-  <div class="header"> Hello On this Char room
-
-    
+  <div class="header"> Hello to Huguette's Chat room
 
 </div>
 
@@ -22,7 +20,7 @@
   </ul>
 
   <form>
-  	<textarea rows="1" cols="100"></textarea>
+  	<textarea rows="1" cols="50"></textarea>
   </form>
 
 </template>
